# cmake-learning

./: .gitignore  .gitmodules  README.md
01 - Example/01 - Makefiles/: main
01 - Example/02 - CMake/: CMakeLists.txt  main.cpp
01 - Example/DemoLib/: CMakeLists.txt
01 - Example/DemoLib/cpp/: adder.cpp  adder.h
01 - Example/DemoProject/: CMakeLists.txt
01 - Example/DemoProject/cpp/: main.cpp
02 - Example/DemoLib/: CMakeLists.txt
02 - Example/DemoLib/cpp/: adder.h
02 - Example/DemoProject/: CMakeLists.txt  demoprojectConfig.h.in
02 - Example/DemoProject/cpp/: main.cpp
03 - Example /: CMakeLists.txt  helloConfig.h.in
03 - Example /cpp/: main.cpp
